<resources>
    <string name="app_name">DvtWeather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="min">min</string>
    <string name="current">current</string>
    <string name="max">max</string>
    <string name="rainy">Rainy</string>
    <string name="cloudy">Cloudy</string>
    <string name="sunny">Sunny</string>
    <string name="favorite_location">Favorite location</string>
    <string name="navigation_drawer_open">open drawer</string>
    <string name="navigation_drawer_close">close drawer</string>
    <string name="favorite">Add favourite</string>
    <string name="current_location">Current location</string>
    <string name="manage_location">Manage location</string>
    <string name="oops_no_data">Nothing to show</string>
    <string name="looks_like_no_data">Looks like we have nothing to show check your connection and try again</string>
    <string name="something_went_wromg">Error something went wrong</string>
    <string name="location_added">added</string>
    <string name="already_added">already added</string>
    <string name="enable_location">Enable location</string>
    <string name="no_va_loaction">No location added</string>
</resources>