<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/ghost_color">

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/dimens_100dp"
        android:layout_height="@dimen/dimens_100dp"
        android:layout_above="@id/title"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image"
        android:src="@drawable/logo"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/oops_no_data"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <TextView
        android:layout_marginHorizontal="@dimen/dimens_10dp"
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimens_5dp"
        android:alpha="0.8"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center"
        android:text="@string/looks_like_no_data"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/manageBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subTitle"
        android:layout_marginHorizontal="@dimen/dimens_40dp"
        android:layout_marginVertical="@dimen/dimens_10dp"
        android:backgroundTint="@color/black_app_transparent"
        android:text="@string/retry"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/dimens_40dp" />

</RelativeLayout>