<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/embers_color_one"
    tools:openDrawer="start">

    <ImageButton
        android:contentDescription="@string/image"
        android:id="@+id/to_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/dimens_10dp"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:layout_marginEnd="@dimen/dimens_10dp"
        android:layout_marginBottom="@dimen/dimens_10dp"
        android:background="?selectableItemBackground"
        android:src="@drawable/ic_baseline_settings_24" />

    <TextView
        android:id="@+id/curTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/to_settings"
        android:alpha="0.9"
        android:background="?selectableItemBackground"
        android:drawablePadding="@dimen/dimens_20dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center|start"
        android:paddingHorizontal="@dimen/dimens_20dp"
        android:paddingVertical="@dimen/dimens_20dp"
        android:text="@string/current_location"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />


    <include
        android:id="@+id/favItem"
        layout="@layout/favorite_drawer_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/curTitle"
        android:layout_marginHorizontal="@dimen/dimens_20dp" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_2dp"
        android:layout_below="@id/favItem"
        android:layout_marginHorizontal="@dimen/dimens_20dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/dot_line" />


    <TextView
        android:id="@+id/favTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view1"
        android:alpha="0.9"
        android:background="?selectableItemBackground"
        android:drawablePadding="@dimen/dimens_20dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center|start"
        android:paddingHorizontal="@dimen/dimens_20dp"
        android:paddingVertical="@dimen/dimens_20dp"
        android:text="@string/favorite_location"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_baseline_favorite_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:paddingHorizontal="@dimen/dimens_20dp"
        android:id="@+id/containerFav"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/favTitle"
        tools:itemCount="2"
        tools:listitem="@layout/favorite_drawer_location" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/manageBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/containerFav"
        android:layout_marginHorizontal="@dimen/dimens_40dp"
        android:layout_marginVertical="@dimen/dimens_5dp"
        android:backgroundTint="@color/black_app_transparent"
        android:text="@string/manage_location"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/dimens_40dp" />


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_2dp"
        android:layout_below="@id/manageBtn"
        android:layout_marginHorizontal="@dimen/dimens_20dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/dot_line" />

</RelativeLayout>