<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/currentItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/cloudy_color"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/dimens_10dp">

        <TextView
            android:id="@+id/minTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            tools:text="18\u00B0"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:gravity="center"
            android:text="@string/min"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/dimens_10dp">

        <TextView
            android:id="@+id/currentTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            tools:text="18\u00B0"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:gravity="center"
            android:text="@string/current"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/dimens_10dp">

        <TextView
            android:id="@+id/maxTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            tools:text="18\u00B0"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:gravity="center"
            android:text="@string/max"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>